<resources>
    <string name="app_name">Первая мед. помощь</string>
    <string name="textMainAct1">Методы оказания первой помощи на все случаи жизни</string>
    <string name="textMainAct2">Читать</string>
    <string name="textTemiAct1">Первая помощь</string>
    <string name="textTemiAct2">Психологическая помощь</string>
    <string name="textTemiAct3">Помощь при ушибах</string>
    <string name="textTemiAct4">Помощь при ожогах</string>
    <string name="textTemiAct5">Помощь при отравлении</string>
    <string name="textMedPomoahAct1">Первая помощь — это ряд лечебно-профилактических мероприятий, выполняемых в необходимых при несчастных случаях и внезапных заболеваниях[1], меры срочной помощи раненым или больным людям, предпринимаемые до прибытия медработника или до помещения больного в медицинское учреждение.</string>
    <string name="textMedPomoahAct2">Сначала нужно остановиться и внимательно убедиться в том, что опасность миновала. Если опасность присутствует, то следует либо устранить её, либо эвакуировать пострадавшего (не подвергая опасности себя), либо убежать (оповещая всех людей по пути об опасности). Такое поведение необходимо для соблюдения главного правила спасательных операций: количество пострадавших не должно увеличиться!</string>
    <string name="textMedPomoahAct3">В зависимости от ситуации могут быть проведены различные действия:</string>
    <string name="textMedPomoahAct4">1. Провести оценку обстановки и обеспечить безопасные условия для оказания первой помощи:</string>
    <string name="textMedPomoahAct5"><u>1) определить угрожающие факторы для собственной жизни и здоровья; 2) определить угрожающие факторы для жизни и здоровья пострадавшего; 3) устранить угрожающие факторы для жизни и здоровья; 4) прекратить действие повреждающих факторов на пострадавшего; 5) при необходимости, оценить количество пострадавших; 6) извлечь пострадавшего из транспортного средства или других труднодоступных мест (при необходимости); 7) переместить пострадавшего (при необходимости).</u></string>
    <string name="textMedPomoahAct6">2. Определить наличие сознания у пострадавшего.</string>
    <string name="textMedPomoahAct7"><u>При наличии сознания перейти к п. 7 Алгоритма; при отсутствии сознания перейти к п. 3 Алгоритма.</u></string>
    <string name="textMedPomoahAct8">3. Восстановить проходимость дыхательных путей и определить признаки жизни:</string>
    <string name="textMedPomoahAct9"><u>1) запрокинуть голову с подъемом подбородка; 2) выдвинуть нижнюю челюсть (при необходимости); 3) определить наличие нормального дыхания с помощью слуха, зрения и осязания; 4) определить наличие кровообращения путем проверки пульса на магистральных артериях (одновременно с определением дыхания и при наличии соответствующей подготовки). При наличии дыхания перейти к п. 6 Алгоритма; при отсутствии дыхания перейти к п. 4 Алгоритма.</u></string>
    <string name="textMedPomoahAct10">4. Вызвать скорую медицинскую помощь, другие специальные службы</string>
    <string name="textMedPomoahAct11"><u>Вызвать скорую медицинскую помощь, другие специальные службы, сотрудники которых обязаны оказывать первую помощь в соответствии с федеральным законом или со специальным правилом (по тел. 03, 103 или 112, привлекая помощника или с использованием громкой связи на телефоне).</u></string>
    <string name="textMedPomoahAct12">5. Начать проведение сердечно-легочной реанимации путем чередования:</string>
    <string name="textMedPomoahAct13"><u>1) давления руками на грудину пострадавшего; 2) искусственного дыхания «Рот ко рту», «Рот к носу», с использованием устройств для искусственного дыхания. При появлении признаков жизни перейти к п. 6 Алгоритма.</u></string>
    <string name="textMedPomoahAct14">6. При появлении (или наличии) признаков жизни выполнить мероприятия по поддержанию проходимости дыхательных путей одним или несколькими способами:</string>
    <string name="textMedPomoahAct15"><u>1) придать устойчивое боковое положение; 2) запрокинуть голову с подъемом подбородка; 3) выдвинуть нижнюю челюсть.</u></string>
    <string name="textMedPomoahAct16">7. Провести обзорный осмотр пострадавшего и осуществить мероприятия по временной остановке наружного кровотечения одним или несколькими способами:</string>
    <string name="textMedPomoahAct17"><u>1) наложением давящей повязки; 2) пальцевым прижатием артерии; 3) прямым давлением на рану; 4) максимальным сгибанием конечности в суставе; 5) наложением жгута.</u></string>
    <string name="textMedPomoahAct18">8. Провести подробный осмотр пострадавшего в целях выявления признаков травм, отравлений и других состояний, угрожающих его жизни и здоровью, осуществить вызов скорой медицинской помощи (если она не была вызвана ранее):</string>
    <string name="textMedPomoahAct19"><u>1) провести осмотр головы; 2) провести осмотр шеи; 3) провести осмотр груди; 4) провести осмотр спины; 5) провести осмотр живота и таза; 6) осмотр конечностей; 7) наложить повязки при травмах различных областей тела, в том числе окклюзионную (герметизирующую) при ранении грудной клетки; 8) провести иммобилизацию (с помощью подручных средств, аутоиммобилизацию, с использованием медицинских изделий); 9) зафиксировать шейный отдел позвоночника (вручную, подручными средствами, с использованием медицинских изделий); 10) прекратить воздействие опасных химических веществ на пострадавшего (промыть желудок путем приема воды и вызывания рвоты, удалить с поврежденной поверхности и промыть поврежденные поверхности проточной водой); 11) провести местное охлаждение при травмах, термических ожогах и иных воздействиях высоких температур или теплового излучения; 12) провести термоизоляцию при отморожениях и других эффектах воздействия низких температур.</u></string>
    <string name="textMedPomoahAct20">9. Придать пострадавшему оптимальное положение тела</string>
    <string name="textMedPomoahAct21"><u>Для обеспечения ему комфорта и уменьшения степени его страданий.</u></string>
    <string name="textMedPomoahAct22">10. Постоянно контролировать состояние пострадавшего и оказывать психологическую поддержку</string>
    <string name="textMedPomoahAct23"><u>Наличие сознания, дыхания и кровообращения</u></string>
    <string name="textMedPomoahAct24">11. Передать пострадавшего бригаде скорой медицинской помощи</string>
    <string name="textMedPomoahAct25"><u>Передать пострадавшего бригаде скорой медицинской помощи, другим специальным службам, сотрудники которых обязаны оказывать первую помощь в соответствии с федеральным законом или со специальным правилом при их прибытии и распоряжении о передаче им пострадавшего, сообщив необходимую информацию.</u></string>
    <string name="textMedPomoah1Act1">Психологическая поддержка – это система приемов, которая позволяет людям, не обладающим психологическим образованием, помочь окружающим (и себе), оказавшись в экстремальной ситуации, справиться с психологическими реакциями, которые возникают в связи с этим кризисом или катастрофой.</string>
    <string name="textMedPomoah1Act2">Приемы оказания психологической поддержки в случае проявления той или иной реакции у пострадавшего.</string>
    <string name="textMedPomoah1Act3">Различают следующие острые стрессовые реакции: плач, истероидную реакцию, агрессивную реакцию, страх, апатию. Плач Признаки: • человек уже плачет или готов разрыдаться; • подрагивают губы; • наблюдается ощущение подавленности. Плач – это та реакция, которая позволяет в сложной кризисной ситуации выразить переполняющие человека эмоции. Нужно дать этой реакции состояться.</string>
    <string name="textMedPomoah1Act4">Помощь при плаче:</string>
    <string name="textMedPomoah4Act1">Стоит обратиться за медицинской помощью при ожогах различного происхождения если:</string>
    <string name="textMedPomoah4Act2"><u>обожжено 10% и более участков тела;
ожог кистей, стоп или лица составляет более 1% общей площади тела;
степень ожога такова, что повреждены глубокие слои кожи (3-я и выше);
возникают симптомы болевого шока – тахикардия, падение артериального давления.</u></string>
    <string name="textMedPomoah4Act3">Медработники, оценив степень ожога, окажут первую помощь на месте и, скорее всего, порекомендуют госпитализацию. Но что делать, если «скорая» задержалась? Первая помощь пострадавшим при ожогах:</string>
    <string name="textMedPomoah4Act4"><u>Удалить источники ожога. Если это горящая одежда, потушить огонь водой или пеной. Если ожог получен вследствие контакта с химическими веществами, удалить остатки агрессивных веществ с кожи. Важно помнить, что нельзя смывать водой негашеную известь, а также органические алюминиевые соединения, потому что они под воздействием воды воспламеняются. Такие вещества лучше сперва нейтрализовать или удалить сухой тканью.</u></string>
    <string name="textMedPomoah4Act5"><u>Охладить под проточной прохладной водой место ожога. Оптимальное время охлаждения – 15-20 мин. Если поражено более 20% участков тела, завернуть пострадавшего в чистую, смоченную в прохладной воде, простынь.</u></string>
    <string name="textMedPomoah4Act6"><u>Защитить ожоговую рану от инфекции путем промывания раствором фурацилина.</u></string>
    <string name="textMedPomoah4Act7"><u>Нанести легкую стерильную марлевую повязку. При этом не сдавливать место ожога.</u></string>
    <string name="textMedPomoah4Act8"><u>Если обожжены конечности, стоит зафиксировать места ожогов, осторожно наложив шины.</u></string>
    <string name="textMedPomoah4Act9"><u>Дать пострадавшему любой анальгетик или жаропонижающее средство. Они позволят предупредить развитие болевого шока и резкий подъем температуры.</u></string>
    <string name="textMedPomoah4Act10">Волдыри при ожогах нужно обрабатывать очень осторожно. Первая помощь не предусматривает нарушения целостности волдырей. Их вскрытие и удаление жидкости проводят в больнице.</string>
    <string name="textMedPomoah4Act11">В случаях ожога лица необходимо медицинское вмешательство. До приезда скорой помощи следует:</string>
    <string name="textMedPomoah4Act12"><u>Охладить обожженный участок.</u></string>
    <string name="textMedPomoah4Act13"><u>Обработать ожог раствором фурацилина.</u></string>
    <string name="textMedPomoah4Act14"><u>Принять обезболивающее средство.</u></string>
    <string name="textMedPomoah4Act15">Первая помощь при ожогах пищевода</string>
    <string name="textMedPomoah4Act16"><u>В случае заглатывания агрессивных химических веществ может произойти ожог пищевода и гортани. Первое, что может сделать сам пострадавший – принять большое количество воды или молока, чтобы снизить концентрацию химического вещества. После такого приема промывающей жидкости, скорее всего, наступает рвота. Таким образом, происходит первичное промывание пищевода и желудка. Далее срочно нужно обратиться в больницу. Обезболивающие средства в случае такого ожога вводят внутривенно. Также проводят срочное промывание при помощи зонда.</u></string>
    <string name="textMedPomoah4Act17">Первая помощь при ожоге пальца. Ожог пальца 1-й и 2-й степени не требует госпитализации. В таких случаях следует оказать первую помощь при легких ожогах:</string>
    <string name="textMedPomoah4Act18"><u>15-20 мин. подержать обожженное место под проточной прохладной водой.</u></string>
    <string name="textMedPomoah4Act19"><u>Промыть пострадавший участок кожи раствором фурацилина или раствором перекиси водорода.</u></string>
    <string name="textMedPomoah4Act20"><u>Наложить свободную стерильную марлевую повязку.</u></string>
    <string name="textMedPomoah4Act21">В качестве первой помощи при сильных ожогах пальца охлаждение проводят путем обертывания пострадавшей части пальца стерильной прохладной мокрой тканью. Далее нужно обратиться к врачу.</string>
</resources>