<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pervayapomosh.firstmedicalaid.MedPomoshActivity1"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct3"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct4"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct6"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct7"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct8"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct9"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct10"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct11"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct12"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct13"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct14"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct15"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct16"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct17"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct18"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct19"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct20"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct21"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct22"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct23"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct24"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/textMedPomoahAct25"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="10dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>